<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_cedula"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtcedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_nombre"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_estrato"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinnerestrato"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:entries="@array/estrato"
        android:paddingTop="4dp"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/texto_salario"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtsalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/texto_nivel_educativo"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinnerniveleducativo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:entries="@array/nivelEducativo"
        android:paddingTop="4dp"
        android:paddingBottom="4dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnguardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="7dp"
            android:text="@string/boton_guardar"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btnbuscar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnbuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/boton_buscar"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btnactualizar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnguardar" />

        <Button
            android:id="@+id/btnactualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/boton_actualizar"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btneliminar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnbuscar" />

        <Button
            android:id="@+id/btneliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/boton_eliminar"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btnlistado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnactualizar" />

        <Button
            android:id="@+id/btnlistado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/boton_listado"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btneliminar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
